--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.1.1
 author=Motion Dynamics <info@motiondyanmics.com>
 maintainer=Motion <info@motiondyanmics.com>
 sentence=Library for quadrature encoders.
-paragraph=A class to sample quadrature encoded signals to determine position and direction.
+paragraph=A class to sample quadrature encoded signals to determine direction, position, and velocity. It uses a PSNS state machine to provide precise and stable control.  Object oriented so each encoder can be instantiated as it's own object. 
 category=Sensors
 url=https://github.com/willpatton/Motion_Encoders
 architectures=*
