--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Motion Encoders
 version=1.1.1
-author=Motion Dynamics <info@motiondyanmics.com>
-maintainer=Motion <info@motiondyanmics.com>
+author=Motion Dynamics <info@motiondynamics.com>
+maintainer=Motion <info@motiondynamics.com>
 sentence=Library for quadrature encoders.
 paragraph=A class to sample quadrature encoded signals to determine direction, position, and velocity. It uses a PSNS state machine to provide precise and stable control.  Object oriented so each encoder can be instantiated as it's own object. 
 category=Sensors
